SNC-4619: Added standard css for widget components.

--- a/src/MEGASync/gui/Resources.qrc
+++ b/src/MEGASync/gui/Resources.qrc
@@ -1,5 +1,6 @@
 <RCC>
     <qresource prefix="/">
         <file>colors/ColorThemedTokens.json</file>
+        <file>style/WidgetsComponentsStyleSheets.css</file>
     </qresource>
 </RCC>
