Major changes regarding fail states and other minor errors

--- a/src/MEGASync/stalled_issues/gui/macx/StalledIssueHeader.ui
+++ b/src/MEGASync/stalled_issues/gui/macx/StalledIssueHeader.ui
@@ -360,7 +360,7 @@
      </property>
      <layout class="QHBoxLayout" name="horizontalLayout_4">
       <property name="spacing">
-       <number>0</number>
+       <number>20</number>
       </property>
       <property name="leftMargin">
        <number>0</number>
@@ -408,7 +408,7 @@
        <widget class="QWidget" name="actionMessageContainer" native="true">
         <layout class="QHBoxLayout" name="horizontalLayout_5">
          <property name="spacing">
-          <number>5</number>
+          <number>2</number>
          </property>
          <property name="leftMargin">
           <number>0</number>
@@ -440,6 +440,18 @@
          </item>
          <item>
           <widget class="QLabel" name="actionMessageIcon">
+           <property name="minimumSize">
+            <size>
+             <width>16</width>
+             <height>16</height>
+            </size>
+           </property>
+           <property name="maximumSize">
+            <size>
+             <width>16</width>
+             <height>16</height>
+            </size>
+           </property>
            <property name="text">
             <string notr="true"/>
            </property>
