--- a/src/MEGASync/gui/Resources_win.qrc
+++ b/src/MEGASync/gui/Resources_win.qrc
@@ -1529,5 +1529,11 @@
         <file>images/icons/folder/synced-folder.png</file>
         <file>images/icons/folder/synced-folder@2x.png</file>
         <file>images/icons/folder/synced-folder@3x.png</file>
+        <file>images/themed/light/switch_on_hover.svg</file>
+        <file>images/themed/light/switch_off_pressed.svg</file>
+        <file>images/themed/light/switch_off_hover.svg</file>
+        <file>images/themed/light/switch_on_pressed.svg</file>
+        <file>images/themed/light/switch_off.svg</file>
+        <file>images/themed/light/switch_on.svg</file>
     </qresource>
 </RCC>
