--- a/src/MEGASync/gui/linux/NotificationsSettings.ui
+++ b/src/MEGASync/gui/linux/NotificationsSettings.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>264</width>
-    <height>432</height>
+    <width>390</width>
+    <height>498</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -31,20 +31,43 @@
      <property name="title">
       <string/>
      </property>
-     <layout class="QVBoxLayout" name="GeneralSwitchLayout">
+     <layout class="QVBoxLayout" name="verticalLayout_7">
       <item>
-       <widget class="QLabel" name="GeneralSwithState">
-        <property name="text">
-         <string>System notifications:</string>
-        </property>
-       </widget>
-      </item>
-      <item>
-       <widget class="SwitchButton" name="GeneralSwitch" native="true">
-        <property name="NotificationType" stdset="0">
-         <UInt>0</UInt>
-        </property>
-       </widget>
+       <layout class="QHBoxLayout" name="horizontalLayout">
+        <item>
+         <widget class="QLabel" name="GeneralSwithState">
+          <property name="font">
+           <font>
+            <pointsize>13</pointsize>
+            <bold>true</bold>
+           </font>
+          </property>
+          <property name="text">
+           <string>System notifications:</string>
+          </property>
+         </widget>
+        </item>
+        <item>
+         <spacer name="horizontalSpacer">
+          <property name="orientation">
+           <enum>Qt::Horizontal</enum>
+          </property>
+          <property name="sizeHint" stdset="0">
+           <size>
+            <width>40</width>
+            <height>20</height>
+           </size>
+          </property>
+         </spacer>
+        </item>
+        <item>
+         <widget class="SwitchButton" name="GeneralSwitch" native="true">
+          <property name="NotificationType" stdset="0">
+           <UInt>0</UInt>
+          </property>
+         </widget>
+        </item>
+       </layout>
       </item>
      </layout>
     </widget>
