SAT-1099.Fix issues found in exclusions window[develop]

--- a/src/MEGASync/gui/qml/qml.qrc
+++ b/src/MEGASync/gui/qml/qml.qrc
@@ -161,5 +161,6 @@
         <file>backups/ResumePage.qml</file>
         <file>backups/BackupsPage.qml</file>
         <file>backups/StepPanel.qml</file>
+        <file>common/Utilities.qml</file>
     </qresource>
 </RCC>
