--- a/src/MEGASync/stalled_issues/gui/macx/StalledIssuesDialog.ui
+++ b/src/MEGASync/stalled_issues/gui/macx/StalledIssuesDialog.ui
@@ -109,10 +109,7 @@ color:#FFFFFF;
    <item>
     <widget class="QStackedWidget" name="stackedWidget">
      <property name="styleSheet">
-      <string notr="true">#ModeSelector
-{
-background-color: #F3F4F4;
-}</string>
+      <string notr="true"/>
      </property>
      <property name="currentIndex">
       <number>0</number>
@@ -592,7 +589,9 @@ QMenu::item:default
               <bool>false</bool>
              </property>
              <property name="styleSheet">
-              <string notr="true">background-color: rgba(255, 255, 255,0);</string>
+              <string notr="true">QWidget{
+background-color: rgba(255, 255, 255,0);
+}</string>
              </property>
              <property name="frameShape">
               <enum>QFrame::NoFrame</enum>
