--- a/src/MEGASync/stalled_issues/gui/win/StalledIssuesDialog.ui
+++ b/src/MEGASync/stalled_issues/gui/win/StalledIssuesDialog.ui
@@ -589,7 +589,9 @@ QMenu::item:default
               <bool>false</bool>
              </property>
              <property name="styleSheet">
-              <string notr="true">background-color: rgba(255, 255, 255,0);</string>
+              <string notr="true">QWidget{
+background-color: rgba(255, 255, 255,0);
+}</string>
              </property>
              <property name="frameShape">
               <enum>QFrame::NoFrame</enum>
