--- a/src/MEGASync/gui/Resources_macx.qrc
+++ b/src/MEGASync/gui/Resources_macx.qrc
@@ -1252,5 +1252,11 @@
         <file>images/StalledIssues/states/solved_state.png</file>
         <file>images/StalledIssues/states/solved_state@2x.png</file>
         <file>images/StalledIssues/states/solved_state@3x.png</file>
+        <file>images/StalledIssues/x-circle-outline.png</file>
+        <file>images/StalledIssues/x-circle-outline@2x.png</file>
+        <file>images/StalledIssues/x-circle-outline@3x.png</file>
+        <file>images/StalledIssues/x-circle-solid.png</file>
+        <file>images/StalledIssues/x-circle-solid@2x.png</file>
+        <file>images/StalledIssues/x-circle-solid@3x.png</file>
     </qresource>
 </RCC>
