--- a/src/MEGASync/stalled_issues/gui/macx/StalledIssuesDialog.ui
+++ b/src/MEGASync/stalled_issues/gui/macx/StalledIssuesDialog.ui
@@ -422,7 +422,7 @@ color:#FFFFFF;
                 <UInt>4</UInt>
                </property>
                <property name="iconPrefix" stdset="0">
-                <string>solved-issues</string>
+                <string>x-circle</string>
                </property>
               </widget>
              </item>
