--- a/src/MEGASync/stalled_issues/gui/linux/StalledIssuesDialog.ui
+++ b/src/MEGASync/stalled_issues/gui/linux/StalledIssuesDialog.ui
@@ -422,7 +422,7 @@ background-color: #F3F4F4;
                 <UInt>4</UInt>
                </property>
                <property name="iconPrefix" stdset="0">
-                <string>x-circle</string>
+                <string notr="true">x-circle</string>
                </property>
               </widget>
              </item>
