--- a/src/MEGASync/gui/win/AccountDetailsDialog.ui
+++ b/src/MEGASync/gui/win/AccountDetailsDialog.ui
@@ -65,11 +65,6 @@ QLabel
     border: 0px;
 }
 
-#lStorage, #lTransfer, #lUsedStorage, #lUsedTransfer
-{
-    margin-left: 6px;
-}
-
 #lStorage, #lTransfer
 {
     padding-bottom: 4px;
@@ -106,12 +101,6 @@ QLabel
 #AccountDetailsDialog[storageState=&quot;full&quot;] #wDetailedUsage  QProgressBar::chunk
 {
   background-color: #FF5646;
-}
-
-#lUsedStorage, #lUsedTransfer
-{
-  color: #8d8d8e;
-  font-size: 13px;
 }
 
 #wDetailedUsage QPushButton
@@ -422,7 +411,7 @@ QProgressBar::chunk
         <widget class="QWidget" name="wStorageUsage" native="true">
          <layout class="QHBoxLayout" name="horizontalLayout_23">
           <property name="spacing">
-           <number>0</number>
+           <number>6</number>
           </property>
           <property name="leftMargin">
            <number>0</number>
@@ -476,7 +465,7 @@ QProgressBar::chunk
               <number>0</number>
              </property>
              <property name="rightMargin">
-              <number>0</number>
+              <number>2</number>
              </property>
              <property name="bottomMargin">
               <number>0</number>
@@ -499,30 +488,20 @@ QProgressBar::chunk
                <property name="text">
                 <string>Storage</string>
                </property>
+               <property name="indent">
+                <number>0</number>
+               </property>
               </widget>
              </item>
              <item>
-              <layout class="QHBoxLayout" name="horizontalLayout_2">
-               <property name="spacing">
+              <widget class="QLabel" name="lUsedStorage">
+               <property name="text">
+                <string notr="true"/>
+               </property>
+               <property name="indent">
                 <number>0</number>
                </property>
-               <item>
-                <widget class="QLabel" name="lUsedStorage"/>
-               </item>
-               <item>
-                <spacer name="horizontalSpacer">
-                 <property name="orientation">
-                  <enum>Qt::Horizontal</enum>
-                 </property>
-                 <property name="sizeHint" stdset="0">
-                  <size>
-                   <width>40</width>
-                   <height>20</height>
-                  </size>
-                 </property>
-                </spacer>
-               </item>
-              </layout>
+              </widget>
              </item>
              <item>
               <spacer name="verticalSpacer_2">
@@ -547,7 +526,7 @@ QProgressBar::chunk
         <widget class="QWidget" name="wTransferUsage" native="true">
          <layout class="QHBoxLayout" name="horizontalLayout_25">
           <property name="spacing">
-           <number>0</number>
+           <number>6</number>
           </property>
           <property name="leftMargin">
            <number>0</number>
@@ -601,7 +580,7 @@ QProgressBar::chunk
               <number>0</number>
              </property>
              <property name="rightMargin">
-              <number>0</number>
+              <number>2</number>
              </property>
              <property name="bottomMargin">
               <number>0</number>
@@ -624,30 +603,20 @@ QProgressBar::chunk
                <property name="text">
                 <string>Transfer</string>
                </property>
+               <property name="indent">
+                <number>0</number>
+               </property>
               </widget>
              </item>
              <item>
-              <layout class="QHBoxLayout" name="horizontalLayout_5">
-               <property name="spacing">
+              <widget class="QLabel" name="lUsedTransfer">
+               <property name="text">
+                <string notr="true"/>
+               </property>
+               <property name="indent">
                 <number>0</number>
                </property>
-               <item>
-                <widget class="QLabel" name="lUsedTransfer"/>
-               </item>
-               <item>
-                <spacer name="horizontalSpacer_2">
-                 <property name="orientation">
-                  <enum>Qt::Horizontal</enum>
-                 </property>
-                 <property name="sizeHint" stdset="0">
-                  <size>
-                   <width>40</width>
-                   <height>20</height>
-                  </size>
-                 </property>
-                </spacer>
-               </item>
-              </layout>
+              </widget>
              </item>
              <item>
               <spacer name="verticalSpacer_4">
