--- a/src/MEGASync/stalled_issues/gui/stalled_issues_cases/linux/LocalAndRemoteNameConflicts.ui
+++ b/src/MEGASync/stalled_issues/gui/stalled_issues_cases/linux/LocalAndRemoteNameConflicts.ui
@@ -45,7 +45,7 @@
 }</string>
      </property>
      <property name="text">
-      <string notr="true"/>
+      <string>Click Rename to resolve this issue, or click the folders below to make adjustments in the local filesystem or in MEGA</string>
      </property>
      <property name="indent">
       <number>11</number>
